# VocabReminder-Server

./: .env  .env.development  .env.production  .gitignore  Dockerfile  README.md  compose.yaml  fasttext-0.9.2-cp311-cp311-win_amd64.whl  pyproject.toml
embedding/: __init__.py  base.py  chinese_embedder.py  english_embedder.py  japanese_embedder.py  korean_embedder.py  logographic_language_embedder.py  space_delimited_language_embedder.py  vietnamese_embedder.py
fasttext_092/: language_detection.py
llm/: free.py  free_llm.json  prompts.py  script.py
logger/: logger.py
model/: models.py
posgres_db/: postgresql.py  users.sql
qdrant_db/: dummy_data.py  gen_data.py  qdrant.py
qdrant_db/db/: meta.json
server/: filter.py  models.py  postgresql.py  qdrant.py  server.py
test/: clean_bgem3_franc_languages.json  data.py  output.txt  test.py  test1.py  test2.py  test3.py  test5.py
